Task 2: Introduction, Getting Started, Projects

--- a/app/leaderboard.html
+++ b/app/leaderboard.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="leaderboard.css">
+  <script src="leaderboard.js"></script>
   <title>Title</title>
 </head>
+
 <body>
 
 </body>
-</html>
